# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingh--head--0.7
#

2004-12-20 22:34:42 GMT	John Goerzen <jgoerzen@complete.org>	patch-115

    Summary:
      Added Show requirements
    Revision:
      missingh--head--0.7--patch-115


    modified files:
     ChangeLog libsrc/MissingH/IO/HVFS.hs
     libsrc/MissingH/IO/HVFS/InstanceHelpers.hs


2004-12-20 22:31:41 GMT	John Goerzen <jgoerzen@complete.org>	patch-114

    Summary:
      Eliminated separate HVIO clases; unified under one main HVIO class
    Revision:
      missingh--head--0.7--patch-114


    modified files:
     ChangeLog libsrc/MissingH/IO/HVFS.hs
     libsrc/MissingH/IO/HVFS/InstanceHelpers.hs
     libsrc/MissingH/IO/HVIO.hs testsrc/HVFStest.hs


2004-12-20 21:59:05 GMT	John Goerzen <jgoerzen@complete.org>	patch-113

    Summary:
      Checkpointing
    Revision:
      missingh--head--0.7--patch-113


    modified files:
     ChangeLog libsrc/MissingH/IO/HVFS/InstanceHelpers.hs
     testsrc/HVFStest.hs


2004-12-20 21:41:29 GMT	John Goerzen <jgoerzen@complete.org>	patch-112

    Summary:
      Checkpointing
    Revision:
      missingh--head--0.7--patch-112


    modified files:
     ChangeLog testsrc/HVFStest.hs


2004-12-20 21:39:40 GMT	John Goerzen <jgoerzen@complete.org>	patch-111

    Summary:
      Checkpointing (compiles, fixed a test)
    Revision:
      missingh--head--0.7--patch-111


    modified files:
     ChangeLog libsrc/MissingH/IO/HVFS/InstanceHelpers.hs
     testsrc/HVFStest.hs


2004-12-20 21:34:43 GMT	John Goerzen <jgoerzen@complete.org>	patch-110

    Summary:
      Checkpointing tests
    Revision:
      missingh--head--0.7--patch-110


    new files:
     testsrc/HVFStest.hs

    modified files:
     ChangeLog testsrc/Tests.hs


2004-12-20 21:20:32 GMT	John Goerzen <jgoerzen@complete.org>	patch-109

    Summary:
      Checkpointing (compiles)
    Revision:
      missingh--head--0.7--patch-109

